--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "postcss": "^8.4.25",
+    "prettier": "^3.0.0",
     "tailwindcss": "^3.3.2"
   }
 }
